--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
             <a href="#donate">Take Action</a>
         </nav>
         <h1>
-            HERE ARE MILLIONS OF CLEOS ALL OVER  THE WORLD.
+            THERE ARE MILLIONS OF CLEOS ALL OVER  THE WORLD.
         </h1>
+        
     </header>
     <main>
-        <section>
-            <p>
-                Scroll to learn more
-            </p>
+        <section class="scroll">
+            <a href="#info">
+                Scroll to learn more ᐯ
+            </a>
         </section>
-        <section>
-            <p>AN INDIGENOUS DOMESTIC WORKER’S JOURNEY INSPIRES THIS INTIMATE YET UNIVERSAL PORTRAIT OF FAMILY, MEMORY AND LOVE. IN ROMA, OSCAR WINNER ALFONSO CUARÓN DELIVERS A VIVID, EMOTIONAL PORTRAIT OF A DOMESTIC WORKER, CLEO, WHICH ASKS US TO EXPLORE HOW WE CAN MAKE A DIFFERENCE FOR THE WOMEN WHO CARE FOR OUR FAMILIES AND OUR HOMES: THE REAL-LIFE CLEOS EVERYWHERE.</p>
+        <section id="info" class="info">
+            <p>AN INDIGENOUS DOMESTIC WORKER’S JOURNEY INSPIRES THIS INTIMATE YET UNIVERSAL PORTRAIT OF FAMILY, MEMORY AND LOVE. IN ROMA, OSCAR WINNER ALFONSO CUARÓN DELIVERS A VIVID, EMOTIONAL PORTRAIT OF A DOMESTIC WORKER, CLEO, WHICH ASKS US TO EXPLORE HOW WE CAN MAKE A DIFFERENCE FOR <span>
+                THE WOMEN WHO CARE FOR OUR FAMILIES AND OUR HOMES:
+            </span>
+                 THE REAL-LIFE CLEOS EVERYWHERE.</p>
         </section>
-        <section>
+        <section class="facts">
             <article>
                 <img src="./assets/img/Lev3_1_Project_css-vertiefung_roma/stat-workers-color.svg" alt="">
                 <h2>2.5 million Domestic workers in the United States</h2>
