css section .facts fertig

--- a/index.html
+++ b/index.html
@@ -33,18 +33,42 @@
         <section class="facts">
             <article>
                 <img src="./assets/img/Lev3_1_Project_css-vertiefung_roma/stat-workers-color.svg" alt="">
-                <h2>2.5 million Domestic workers in the United States</h2>
+                <h2 class="orange">
+                    <span class="giant">
+                        2.5 million
+                    </span>
+                     Domestic workers 
+                     <span class="underline">
+                        in the United States
+                     </span>
+                     </h2>
             </article>
             <article>
                 <img src="./assets/img/Lev3_1_Project_css-vertiefung_roma/stat-pay-color.svg" alt="">
-                <h2>70% are paid less than $13/Hr</h2>
+                <h2 class="purple">
+                    70% are 
+                    <span class="underline">
+                        paid less than 
+                    </span> 
+                    <span class="giant">
+                        $13/Hr
+                    </span>
+                    </h2>
             </article>
             <article>
                 <img src="./assets/img/Lev3_1_Project_css-vertiefung_roma/stat-health-color.svg" alt="">
-                <h2>65% Have no health insurance</h2>
+                <h2 class="green">
+                    <span class="giant">
+                        65%
+                    </span>
+                     Have no 
+                     <span class="underline">
+                        health insurance
+                     </span>
+                     </h2>
             </article>
         </section>
-        <section>
+        <section >
             <p>
                 DOMESTIC WORKERS ARE THE UNSUNG HEROINES OF OUR CHILDHOODS AND FAMILIES. THEY ARE NANNIES, HOUSE CLEANERS, AND CARE WORKERS — MOSTLY WOMEN OF COLOR AND IMMIGRANTS. DESPITE THEIR IMPORTANT ROLES, THEIR WORK OFTEN GOES UNRECOGNIZED AND THEIR INDUSTRY UNREGULATED. TAKE ACTION AND HELP US SHIFT THE NARRATIVE.
             </p>
