css section .description fertig

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
         </section>
         <section id="info" class="info">
-            <p>AN INDIGENOUS DOMESTIC WORKER’S JOURNEY INSPIRES THIS INTIMATE YET UNIVERSAL PORTRAIT OF FAMILY, MEMORY AND LOVE. IN ROMA, OSCAR WINNER ALFONSO CUARÓN DELIVERS A VIVID, EMOTIONAL PORTRAIT OF A DOMESTIC WORKER, CLEO, WHICH ASKS US TO EXPLORE HOW WE CAN MAKE A DIFFERENCE FOR <span>
+            <p>AN INDIGENOUS DOMESTIC WORKER’S JOURNEY INSPIRES THIS INTIMATE YET UNIVERSAL PORTRAIT OF FAMILY, MEMORY AND LOVE. IN ROMA, OSCAR WINNER ALFONSO CUARÓN DELIVERS A VIVID, EMOTIONAL PORTRAIT OF A DOMESTIC WORKER, CLEO, WHICH ASKS US TO EXPLORE HOW WE CAN MAKE A DIFFERENCE FOR <span class="underline">
                 THE WOMEN WHO CARE FOR OUR FAMILIES AND OUR HOMES:
             </span>
                  THE REAL-LIFE CLEOS EVERYWHERE.</p>
@@ -68,9 +68,13 @@
                      </h2>
             </article>
         </section>
-        <section >
+        <section class="description">
             <p>
-                DOMESTIC WORKERS ARE THE UNSUNG HEROINES OF OUR CHILDHOODS AND FAMILIES. THEY ARE NANNIES, HOUSE CLEANERS, AND CARE WORKERS — MOSTLY WOMEN OF COLOR AND IMMIGRANTS. DESPITE THEIR IMPORTANT ROLES, THEIR WORK OFTEN GOES UNRECOGNIZED AND THEIR INDUSTRY UNREGULATED. TAKE ACTION AND HELP US SHIFT THE NARRATIVE.
+                DOMESTIC WORKERS ARE THE 
+                <span class="underline">
+                    UNSUNG HEROINES OF OUR CHILDHOODS AND FAMILIES.
+                </span>
+                 THEY ARE NANNIES, HOUSE CLEANERS, AND CARE WORKERS — MOSTLY WOMEN OF COLOR AND IMMIGRANTS. DESPITE THEIR IMPORTANT ROLES, THEIR WORK OFTEN GOES UNRECOGNIZED AND THEIR INDUSTRY UNREGULATED. TAKE ACTION AND HELP US SHIFT THE NARRATIVE.
             </p>
         </section>
     </main>
