--- a/index.html
+++ b/index.html
@@ -82,15 +82,18 @@
         <div>
             <img src="./assets/img/Lev3_1_Project_css-vertiefung_roma/kid.png" alt="">
         </div>
-        <section id="donate">
+        <section id="donate" class="donate">
             <h2>
                 YOU CAN HELP IMPROVE WORKING CONDITIONS FOR DOMESTIC WORKERS.
             </h2>
             <a href="#">Donate</a>
         </section>
-        <section>
+        <section class="pp">
             <p>
-                Website inspired from the film ROMA
+                Website inspired from the film 
+                <span class="green">
+                    ROMA
+                </span>
             </p>
         </section>
     </footer>
